Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
@%@~LICENSE:MIT~@%@

saw_061422_1 - Initial commit (barebones pip project skeleton).
