@@ -8,3 +8,14 @@ In service of:
 - **N**ames
 - **K**eys
 
+## Installation
+
+LANK is easy to install using pip:
+```
+pip install lank
+```
+
+## Usage
+
+Once installed, simply run the `lank` command from any terminal.
+
