@@ -17,7 +17,9 @@ def run():
             "License :: OSI Approved :: MIT License",
             "Operating System :: OS Independent",
         ],
-        install_requires=open('requirements.txt').read().split('\n'),
+        install_requires=[
+            'appdirs',
+        ],
         entry_points = {
             'console_scripts': ['lank=lank.cmd:main']
         },
