@@ -1,5 +1,7 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson)
 @%@~LICENSE:MIT~@%@
 
+saw_061422_2 - Now have a simple `lank` command.
+
 saw_061422_1 - Initial commit (barebones pip project skeleton).
 
